Screw modifier crashes blender #75244

Closed
opened 2020-03-31 12:12:20 +02:00 by Denis Belov · 11 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.50

Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-30 22:07, hash: b555b8dedc
Worked: blender-2.83-a103d09df485

Short description of error
Screw modifier instantly crashes blender to desktop

Exact steps for others to reproduce the error
Add screw modifier to object - instant crash

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.50 **Blender Version** Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-30 22:07, hash: `b555b8dedc` Worked: blender-2.83-a103d09df485 **Short description of error** Screw modifier instantly crashes blender to desktop **Exact steps for others to reproduce the error** Add screw modifier to object - instant crash
Author

Added subscriber: @DenisBelov

Added subscriber: @DenisBelov

#75251 was marked as duplicate of this issue

#75251 was marked as duplicate of this issue

Added subscribers: @Jeroen-Bakker, @rjg

Added subscribers: @Jeroen-Bakker, @rjg

This bug was introduced in commit cf258b02f4 @Jeroen-Bakker .

extract_pos_nor_loop_mesh(const MeshRenderData * mr, int l, const MLoop * mloop, int UNUSED_p, const MPoly * mpoly, void * _data) Line 1520	C
mesh_extract_iter(const MeshRenderData * mr, const eMRIterType iter_type, int start, int end, const MeshExtract * extract, void * user_data) Line 4485	C
extract_run(TaskPool * UNUSED_pool, void * taskdata, int UNUSED_threadid) Line 4511	C
extract_task_create(TaskPool * task_pool, const Scene * scene, const MeshRenderData * mr, const MeshExtract * extract, void * buf, int * task_counter) Line 4590	C
mesh_buffer_cache_create_requested(MeshBatchCache * cache, MeshBufferCache mbc, Mesh * me, const bool is_editmode, const float[4] * obmat, const bool do_final, const bool do_uvedit, const bool use_subsurf_fdots, const DRW_MeshCDMask * cd_layer_used, const Scene * scene, const ToolSettings * ts, const bool use_hide) Line 4688	C
DRW_mesh_batch_cache_create_requested(Object * ob, Mesh * me, const Scene * scene, const bool is_paint_mode, const bool use_hide) Line 1412	C
drw_batch_cache_generate_requested(Object * ob) Line 3539	C
drw_engines_cache_populate(Object * ob) Line 1019	C
DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1482	C
DRW_draw_view(const bContext * C) Line 1400	C
view3d_draw_view(const bContext * C, ARegion * region) Line 1603	C
view3d_main_region_draw(const bContext * C, ARegion * region) Line 1628	C
ED_region_do_draw(bContext * C, ARegion * region) Line 539	C
wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 669	C
wm_draw_window(bContext * C, wmWindow * win) Line 795	C
wm_draw_update(bContext * C) Line 997	C
WM_main(bContext * C) Line 454	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 526	C
This bug was introduced in commit cf258b02f4 @Jeroen-Bakker . ``` extract_pos_nor_loop_mesh(const MeshRenderData * mr, int l, const MLoop * mloop, int UNUSED_p, const MPoly * mpoly, void * _data) Line 1520 C mesh_extract_iter(const MeshRenderData * mr, const eMRIterType iter_type, int start, int end, const MeshExtract * extract, void * user_data) Line 4485 C extract_run(TaskPool * UNUSED_pool, void * taskdata, int UNUSED_threadid) Line 4511 C extract_task_create(TaskPool * task_pool, const Scene * scene, const MeshRenderData * mr, const MeshExtract * extract, void * buf, int * task_counter) Line 4590 C mesh_buffer_cache_create_requested(MeshBatchCache * cache, MeshBufferCache mbc, Mesh * me, const bool is_editmode, const float[4] * obmat, const bool do_final, const bool do_uvedit, const bool use_subsurf_fdots, const DRW_MeshCDMask * cd_layer_used, const Scene * scene, const ToolSettings * ts, const bool use_hide) Line 4688 C DRW_mesh_batch_cache_create_requested(Object * ob, Mesh * me, const Scene * scene, const bool is_paint_mode, const bool use_hide) Line 1412 C drw_batch_cache_generate_requested(Object * ob) Line 3539 C drw_engines_cache_populate(Object * ob) Line 1019 C DRW_draw_render_loop_ex(Depsgraph * depsgraph, RenderEngineType * engine_type, ARegion * region, View3D * v3d, GPUViewport * viewport, const bContext * evil_C) Line 1482 C DRW_draw_view(const bContext * C) Line 1400 C view3d_draw_view(const bContext * C, ARegion * region) Line 1603 C view3d_main_region_draw(const bContext * C, ARegion * region) Line 1628 C ED_region_do_draw(bContext * C, ARegion * region) Line 539 C wm_draw_window_offscreen(bContext * C, wmWindow * win, bool stereo) Line 669 C wm_draw_window(bContext * C, wmWindow * win) Line 795 C wm_draw_update(bContext * C) Line 997 C WM_main(bContext * C) Line 454 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 526 C ```

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Similar to other code, there should be a check if mr->v_origindex is NULL. This needs to be fixed in the following functions in draw_cache_extract_mesh.c :

  • extract_pos_nor_loop_mesh
  • extract_lnor_hq_loop_mesh
  • extract_lnor_loop_mesh
  • vert_set_mesh

unless it's otherwise guaranteed that it won't be NULL when calling these functions.

Similar to other code, there should be a check if `mr->v_origindex` is `NULL`. This needs to be fixed in the following functions in [draw_cache_extract_mesh.c ](https://developer.blender.org/diffusion/B/browse/master/source/blender/draw/intern/draw_cache_extract_mesh.c): - `extract_pos_nor_loop_mesh` - `extract_lnor_hq_loop_mesh` - `extract_lnor_loop_mesh` - `vert_set_mesh` unless it's otherwise guaranteed that it won't be `NULL` when calling these functions.
Jeroen Bakker self-assigned this 2020-03-31 15:31:43 +02:00

This issue was referenced by b0bd9b4c70

This issue was referenced by b0bd9b4c70ccdf5d6c2891a543fafd36be0d8af0
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Closed as duplicate of #75251

Closed as duplicate of #75251

Added subscribers: @snieb-1, @Oxer-1, @iss

Added subscribers: @snieb-1, @Oxer-1, @iss

Changed status from 'Duplicate' to: 'Resolved'

Changed status from 'Duplicate' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75244
No description provided.